# yolov5_cpp_openvino

./: CMakeLists.txt  README.md  main.cpp
include/: Detector.h  Utils.h
src/: CMakeLists.txt  Detector.cpp  Utils.cpp  input_parser.cpp
